<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"
    >
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/perconal_page"
            app:itemBackground="@drawable/menu_item_selector"/>
        <item
            android:id="@+id/nav_conditions"
            android:icon="@drawable/ic_bonuses"
            android:title="@string/condition_credit"
            app:itemBackground="@drawable/menu_item_selector"/>
        <item
            android:id="@+id/nav_adress"
            android:icon="@drawable/ic_location"
            android:title="@string/contacts"
            app:itemBackground="@drawable/menu_item_selector"/>
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_calculator"
            android:title="@string/calculator"
            app:itemBackground="@drawable/menu_item_selector"/>
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/news_and_sales"
            app:itemBackground="@drawable/menu_item_selector"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_review_book"
                android:title="@string/about_us"
                app:itemBackground="@drawable/menu_item_selector"/>
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_bot"
            android:title="@string/chat"
            app:itemBackground="@drawable/menu_item_selector"/>
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_market"
            android:title="@string/goods"
            app:itemBackground="@drawable/menu_item_selector"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            app:itemBackground="@drawable/menu_item_selector"/>

    </group>
</menu>
