<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textColor="#ffffff"
        android:background="@color/colorPrimaryDark"
        android:text="@string/new_client"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/base_client"
        android:textColor="#ffffff"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn0"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toTopOf="@+id/btn0" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:text="@string/constant_client"
        android:textColor="#ffffff"
        android:background="@color/colorPrimaryDark"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn1"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="@+id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="86dp"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/vip_client"
        android:textColor="#ffffff"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toTopOf="@+id/btn2" />
</android.support.constraint.ConstraintLayout>