<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/info"
        android:background="@drawable/shadow_yellow"
        android:id="@+id/surfaceCorners">
    <SurfaceView

        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/code_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/scanned_text"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_start_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <Button
            android:id="@+id/btn_restart_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/restart_scanner"
            android:layout_weight="3"
            />
    <ImageButton
        android:id="@+id/switchCameraButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="11"
        app:srcCompat="@drawable/ic_switch"
         />

</LinearLayout>
    </LinearLayout>
</RelativeLayout>
